WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270433
AX: Incomplete object information with focus event on dynamic created div
https://bugs.webkit.org/show_bug.cgi?id=270433
Summary
AX: Incomplete object information with focus event on dynamic created div
Przemyslaw Gorszkowski
Reported
2024-03-04 02:59:51 PST
The problem was observed on wpewebkit 2.38 (
https://github.com/WebPlatformForEmbedded/WPEWebKit/issues/1212
), but it can be reproduced also on upstream. The issue can be observed with newly created div element(with js) with text and focus it. To reproduce the problem, we can use simple test case from
https://github.com/WebPlatformForEmbedded/WPEWebKit/files/12998812/issue-with-focus-change.html.txt
and simple script in python with pyatspi lib.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-04 03:00:01 PST
<
rdar://problem/123999717
>
Przemyslaw Gorszkowski
Comment 2
2024-03-05 02:19:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25479
EWS
Comment 3
2024-03-12 09:21:07 PDT
Committed
275980@main
(114392b51f9c): <
https://commits.webkit.org/275980@main
> Reviewed commits have been landed. Closing PR #25479 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug