AX: Incomplete object information with focus event on dynamic created div https://bugs.webkit.org/show_bug.cgi?id=270433

Reviewed by Tyler Wilcock.

When the element is dynamically created and focused, the focus change event should be
deferred in case renderer is not available yet but document needs style recalculation.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::shouldDeferFocusChange):
(WebCore::AXObjectCache::onFocusChange):
* Tools/TestWebKitAPI/Tests/WebKitGtk/TestWebKitAccessibility.cpp:
(testAccessibleStateChangedFocus):
(beforeAll):
* LayoutTests/accessibility/focus-new-element.html: Added.
* LayoutTests/platform/glib/accessibility/focus-new-element-expected.txt: Added.
* LayoutTests/platform/ios-simulator-wk2/accessibility/focus-new-element-expected.txt: Added.
* LayoutTests/platform/mac/accessibility/focus-new-element-expected.txt: Added.

Canonical link: https://commits.webkit.org/275980@main